LRCI-7262 Add unit tests for MirrorsGetTask tryLocalNetwork CI detection